--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a class="btn btn-primary" href="index.html"><i class="fas fa-home fa-fw mr-2"></i>Home</a>
                 </div>
 		<div class="my-2 my-md-3">
-                    <a class="btn btn-primary" href="code_ide/code_ide.html"><i class="fas fa-home fa-fw mr-2"></i>Online IDE</a>
+                    <a class="btn btn-primary" href="code_ide/code_ide.html"><i class="fas a-free-code-camp fa-fw mr-2"></i>Online IDE</a>
                 </div>
 
                 <div class="my-2 my-md-3">
