--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <link id="theme-style" rel="stylesheet" href="assets/css/bootstrap.css">
 
+    <meta name="google-site-verification" content="VaW2iqXI8O1Srp621l_D8dvPakEozeag2O9hxxzKMUg" />
+
 </head>
 
 <body>
